crates/rome_formatter/tests/specs/prettier/js/module-blocks/comments.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: comments.js

---
# Input
```js
const m = /*A1*/ module /*A2*/ { /*A3*/
  /*A4*/
  export const foo = "foo";
  export { foo }; /*A5*/
  /*A6*/
}/*A7*/;/*A8*/

const m2 = module/* B1 */{
  /* B2 */
};

```

# Output
```js
const m = /*A1*/ module; /*A2*/
{
  /*A3*/
  /*A4*/
  export const foo = "foo";
  export { foo }; /*A5*/
  /*A6*/
} /*A7*/
/*A8*/

const m2 = module; /* B1 */
{
  /* B2 */
}

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ comments.js:1:32
  │
1 │ const m = /*A1*/ module /*A2*/ { /*A3*/
  │ -------------------------------^ An explicit or implicit semicolon is expected here...
  │ │                               
  │ ...Which is required to end this statement

error[SyntaxError]: Illegal use of an export declaration not at the top level
  ┌─ comments.js:3:3
  │
3 │   export const foo = "foo";
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: Illegal use of an export declaration not at the top level
  ┌─ comments.js:4:3
  │
4 │   export { foo }; /*A5*/
  │   ^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ comments.js:8:26
  │
8 │ const m2 = module/* B1 */{
  │ -------------------------^ An explicit or implicit semicolon is expected here...
  │ │                         
  │ ...Which is required to end this statement


```


